Update folder lists to for pixel phone